<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/delete_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_text"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/non"
            android:textColor="@color/red"
            android:layout_marginEnd="10dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oui"
            android:textColor="@color/green"
            tools:ignore="ButtonStyle" />
    </LinearLayout>



</LinearLayout>