<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/article_commande_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="5dp"
                    app:srcCompat="@drawable/baseline_commande"
                    android:contentDescription="@string/article_commande_icon" />

                <ImageView
                    android:id="@+id/checkbox_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/baseline_check_circle"
                    android:contentDescription="@string/check_icon" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="5dp"
                    android:paddingHorizontal="5dp"
                    android:textAlignment="center"
                    android:background="@color/marron"
                    android:textColor="@color/white"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/produit_text"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@null"
                    android:contentDescription="@string/editer_categorie"
                    app:srcCompat="@drawable/baseline_edit_24"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@null"
                    android:contentDescription="@string/supprimer_categorie"
                    app:srcCompat="@drawable/baseline_delete_24"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@null"
                    android:contentDescription="@string/expand_and_collapse_button"
                    app:srcCompat="@drawable/baseline_chevron"
                    tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/prix_depart_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                tools:ignore="UseCompoundDrawables"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/prix_depart_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:srcCompat="@drawable/baseline_money"
                    android:contentDescription="@string/client_icon" />

                <TextView
                    android:id="@+id/prix_depart_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/remise_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                tools:ignore="UseCompoundDrawables"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/remise_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:srcCompat="@drawable/baseline_percent"
                    android:contentDescription="@string/remise_icon" />

                <TextView
                    android:id="@+id/remise_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>